@@ -26,11 +26,12 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 .\" IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd June 27, 2014
+.Dd September 26, 2014
 .Dt ATF-SH 1
 .Os
 .Sh NAME
 .Nm atf-sh
+.Op Fl s Ar shell
 .Nd interpreter for shell-based test programs
 .Sh SYNOPSIS
 .Nm
@@ -51,7 +52,25 @@ the system-wide shell defined by
 executes the interpreter, loads the
 .Xr atf-sh-api 3
 library and then runs the script.
+You must consider
+.Nm atf-sh
+to be a POSIX shell by default and thus should not use any non-standard
+extensions.
 .Pp
+The following options are available:
+.Bl -tag -width XsXshellXXX
+.It Fl s Ar shell
+Specifies the shell to use instead of the value provided by
+.Va ATF_SHELL .
+.El
+.Sh ENVIRONMENT
+.Bl -tag -width ATFXSHELLXX -compact
+.It Va ATF_SHELL
+Path to the system shell to be used in the generated scripts.
+Scripts must not rely on this variable being set to select a specific
+interpreter.
+.El
+.Sh EXAMPLES
 Scripts using
 .Xr atf-sh-api 3
 should start with:
@@ -59,13 +78,19 @@ should start with:
 #! /usr/bin/env atf-sh
 .Ed
 .Pp
-The following options are available:
-.Bl -tag -width XhXX
-.El
-.Sh ENVIRONMENT
-.Bl -tag -width ATFXSHELLXX -compact
-.It Va ATF_SHELL
-Path to the system shell to be used in the generated scripts.
-.El
+Alternatively, if you want to explicitly choose a shell interpreter, you cannot
+rely on
+.Xr env 1
+to find
+.Nm .
+Instead, you have to hardcode the path to
+.Nm
+in the script and then use the
+.Fl s
+option afterwards as a
+.Em single parameter :
+.Bd -literal -offset indent
+#! /path/to/bin/atf-sh -s/bin/bash
+.Ed
 .Sh SEE ALSO
 .Xr atf-sh-api 3
